test/fixtures/bpmn/error/invalid-attributes.bpmn
<?xml version="1.0" encoding="UTF-8"?>
<definitions xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://apmn.io/spec/APMN/MODEL" id="activity-children" targetNamespace="http://apmn.io/schema/apmn">
  <process $a="b" id="Process_1" xx />
</definitions>